<?xml version="1.0" encoding="utf-8"?>
<!--
/******************************************************************************
 * Copyright 2018 The Baidu Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *****************************************************************************/
  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="@dimen/feed_card_height"
             android:background="@color/feed_frag_bg">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/feed_card_height"
            android:background="@color/feed_bg"
            android:paddingRight="@dimen/feed_progress_top_margin"
            android:paddingLeft="@dimen/default_0"
            android:paddingEnd="@dimen/feed_progress_top_margin" android:paddingStart="@dimen/default_0">
        <ImageView
                android:id="@+id/feed_img"
                android:scaleType="centerCrop"
                android:layout_width="@dimen/feed_card_height"
                android:layout_height="@dimen/feed_card_height"
                android:layout_marginRight="@dimen/feed_title_left_margin"
                android:src="@drawable/feed_default"
                android:layout_marginEnd="@dimen/feed_title_left_margin"/>
        <ImageView
                android:scaleType="centerCrop"
                android:layout_width="@dimen/feed_card_height"
                android:layout_height="@dimen/feed_card_height"
                android:layout_marginRight="@dimen/feed_title_left_margin"
                android:src="@drawable/feed_cover"
                android:layout_marginEnd="@dimen/feed_title_left_margin"/>
        <TextView
                android:id="@+id/feed_title"
                android:textColor="@color/white"
                tools:text="@string/feed_title1"
                android:text="@string/feed_title"
                android:maxLines="1"
                android:layout_toRightOf="@id/feed_img"
                android:textSize="@dimen/feed_title_text_size"
                android:layout_marginTop="@dimen/feed_title_margin_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/feed_img"/>
        <TextView
                android:id="@+id/feed_subtitle"
                android:textColor="@color/sixty_percent_white"
                tools:text="@string/feed_subtitle1"
                android:text="@string/feed_subtitle"
                android:maxLines="1"
                android:layout_toRightOf="@id/feed_img"
                android:layout_marginTop="@dimen/default_4"
                android:layout_below="@id/feed_title"
                android:textSize="@dimen/feed_subtitle_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/feed_img"/>
        <ProgressBar
                android:id="@android:id/progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/feed_progress"
                android:layout_toRightOf="@id/feed_img"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/progress_margin_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/progress_height"
                android:layout_toEndOf="@id/feed_img"/>
    </RelativeLayout>
</FrameLayout>