<?xml version="1.0" encoding="utf-8"?>
<!--
/******************************************************************************
 * Copyright 2018 The Baidu Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *****************************************************************************/
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg"
                android:paddingLeft="@dimen/main_layout_padding_left"
                android:paddingRight="@dimen/main_layout_padding_right"
                android:paddingTop="@dimen/main_layout_padding_top"
                android:paddingStart="@dimen/main_layout_padding_left"
                android:paddingEnd="@dimen/main_layout_padding_right">

    <RelativeLayout
            android:visibility="gone"
            android:id="@+id/status_bar_layout"
            android:layout_width="@dimen/status_bar_width"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

        <ImageView
                android:id="@+id/img_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/net_none"/>

        <ImageView
                android:id="@+id/img_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_network"
                android:layout_marginTop="@dimen/status_bar_icon_margin"
                android:src="@drawable/bt_off"/>

        <ImageView
                android:id="@+id/img_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_bt"
                android:layout_marginTop="@dimen/status_bar_icon_margin"
                android:src="@drawable/gps_3"/>

        <ImageView
                android:id="@+id/voice_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/mic_margin_bottom"
                android:src="@drawable/voice"
                android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/setting_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_bar_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/setting_bar_margin_bottom"
            android:layout_marginLeft="@dimen/setting_bar_margin_left"
            android:layout_toRightOf="@id/status_bar_layout"
            android:background="@color/setting_bar_bg"
            android:layout_marginStart="@dimen/setting_bar_margin_left"
            android:layout_toEndOf="@id/status_bar_layout">


        <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawablePadding="@dimen/tv_phone_padding"
                android:drawableTop="@drawable/home_more_ic_bt_call"
                android:gravity="center"
                android:text="@string/main_call"
                android:textColor="@color/white"
                android:textSize="@dimen/bar_text_size"
                android:visibility="gone"/>

        <TextView
                android:id="@+id/tv_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawablePadding="@dimen/tv_phone_padding"
                android:drawableTop="@drawable/home_more_ic_fm"
                android:gravity="center"
                android:text="@string/main_radio"
                android:textColor="@color/white"
                android:textSize="@dimen/bar_text_size"/>

        <TextView
                android:id="@+id/tv_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawablePadding="@dimen/tv_phone_padding"
                android:drawableTop="@drawable/home_more_ic_video"
                android:gravity="center"
                android:text="@string/main_player"
                android:textColor="@color/white"
                android:textSize="@dimen/bar_text_size"/>

        <TextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawablePadding="@dimen/tv_phone_padding"
                android:drawableTop="@drawable/home_more_ic_car_setting"
                android:gravity="center"
                android:text="@string/main_setting"
                android:textColor="@color/white"
                android:textSize="@dimen/bar_text_size"/>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/setting_bar_height"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/tv_personal_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/tv_phone_padding"
                    android:drawableTop="@drawable/home_more_ic_account"
                    android:gravity="center"
                    android:text="@string/main_mine"
                    android:textColor="@color/white"
                    android:textSize="@dimen/bar_text_size"/>

            <View
                    android:id="@+id/personal_center_red_dot"
                    android:layout_width="@dimen/main_view_width"
                    android:layout_height="@dimen/main_view_width"
                    android:layout_alignTop="@id/tv_personal_center"
                    android:layout_toRightOf="@id/tv_personal_center"
                    android:background="@drawable/red_dot"
                    android:visibility="gone"
                    android:layout_toEndOf="@id/tv_personal_center"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawablePadding="@dimen/tv_phone_padding"
                android:drawableTop="@drawable/home_more_ic_application"
                android:gravity="center"
                android:text="@string/main_more"
                android:textColor="@color/white"
                android:textSize="@dimen/bar_text_size"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/setting_bar"
            android:layout_marginBottom="@dimen/setting_bar_margin_bottom"
            android:layout_marginLeft="@dimen/setting_bar_margin_left"
            android:layout_toRightOf="@id/status_bar_layout"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/setting_bar_margin_left"
            android:layout_toEndOf="@id/status_bar_layout">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <fragment
                    android:id="@+id/map_fragment"
                    android:name="com.baidu.che.codriverlauncher.ui.MapFragment"
                    android:layout_width="@dimen/map_fragment_width"
                    android:layout_height="@dimen/map_fragment_height"/>

            <fragment
                    android:id="@+id/info_fragment"
                    android:name="com.baidu.che.codriverlauncher.ui.InfoFragment"
                    android:layout_width="@dimen/info_fragment_width"
                    android:layout_height="@dimen/info_fragment_height"
                    android:layout_marginLeft="@dimen/info_fragment_margin_left"
                    android:layout_marginStart="@dimen/info_fragment_margin_left"/>
        </LinearLayout>

        <fragment
                android:id="@+id/audio_fragment"
                android:name="com.baidu.che.codriverlauncher.ui.FeedFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/audio_fragment_height"
                android:layout_marginTop="@dimen/audio_fragment_margin_top"/>
    </LinearLayout>

</RelativeLayout>
